<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.veljko.projekat.FourthActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="horizontal|vertical">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:scrollbars="horizontal|vertical"
                android:weightSum="100"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <!--android:background="@drawable/border"-->

                <TableRow
                    android:id="@+id/prviRed"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="10">
                    <!--android:background="@drawable/border"-->

                    <TextView
                        android:id="@+id/prazno"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/prviCas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/_08_00_09_00" />

                    <TextView
                        android:id="@+id/drugiCas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/_09_00_10_00" />

                    <TextView
                        android:id="@+id/treciCas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/_10_00_11_00" />

                    <TextView
                        android:id="@+id/cetvrtiCas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/_11_00_12_00" />

                    <TextView
                        android:id="@+id/petiCas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/_12_00_13_00" />

                    <TextView
                        android:id="@+id/sestiCas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/_13_00_14_00" />

                    <TextView
                        android:id="@+id/sedmiCas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/_14_00_15_00" />

                    <TextView
                        android:id="@+id/osmiCas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/_15_00_16_00" />

                    <TextView
                        android:id="@+id/devetiCas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/_16_00_17_00" />

                    <TextView
                        android:id="@+id/desetiCas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/_17_00_18_00" />

                    <TextView
                        android:id="@+id/jedanaestiCas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/_18_00_19_00" />

                    <TextView
                        android:id="@+id/dvanaestiCas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/_19_00_20_00" />

                    <TextView
                        android:id="@+id/trinaestiCas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/_20_00_21_00" />
                </TableRow>

                <TableRow
                    android:id="@+id/drugiRed"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="15">
                    <!--android:background="@drawable/border"-->

                    <TextView
                        android:id="@+id/Ponedeljak5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ponedeljak"
                        android:textSize="50sp" />

                </TableRow>

                <TableRow
                    android:id="@+id/treciRed"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="15">
                    <!--android:background="@drawable/border"-->

                    <TextView
                        android:id="@+id/Utorak5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/utorak"
                        android:textSize="50sp" />

                </TableRow>

                <TableRow
                    android:id="@+id/cetvrtiRed"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="15">
                    <!--android:background="@drawable/border"-->

                    <TextView
                        android:id="@+id/Sreda5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sreda"
                        android:textSize="50sp" />

                </TableRow>

                <TableRow
                    android:id="@+id/petiRed"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="15">
                    <!--android:background="@drawable/border"-->

                    <TextView
                        android:id="@+id/Cetvrtak5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cetvrtak"
                        android:textSize="50sp" />

                </TableRow>

                <TableRow
                    android:id="@+id/sestiRed"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="15"
                    tools:ignore="TooManyViews">
                    <!--android:background="@drawable/border"-->

                    <TextView
                        android:id="@+id/Petak5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/petak"
                        android:textSize="50sp" />

                </TableRow>

                <TableRow
                    android:id="@+id/sedmiRed"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/dugmeFourth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dalje"
                        tools:ignore="ButtonStyle" />
                </TableRow>
            </TableLayout>
        </HorizontalScrollView>
    </ScrollView>

</android.support.constraint.ConstraintLayout>